[package]
name = "module-six"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
derive-macro = { path = "../derive-macro" }
attribute-macro = { path = "../attribute-macro" }
function-like-macro = { path = "../function-like-macro" }
